SPDX-FileCopyrightText: 2024 Marcel Gosmann <thafiredragonofdeath@gmail.com>
SPDX-License-Identifier: CC0-1.0

Symbols:
# = Comments
+ = New features or other additions
* = Bugfixes, improvements or other modifications
- = Removed features or other removals


µHashtools 0.3.0 (not released yet):
+ Included the debugging symbols (.pdb files) in generated
  distribution archives.
+ Automatic CI builds of release archives on pushing into the master
  branch. The built archives can be are uploaded as artifacts and can
  be downloaded from successful workflow runs (see tab "Actions"
  within the GitHub repository).
* Simplified the packaging of the source code in distribution
  archives. The source code is now located directly within the
  "source_code" directory instead within an additional ZIP archive
  in the same directory.
- Removed release archive generator script (make_release.ps1).
  Distribution archives are now generated by the "dist" target in the
  makefile. Please refer the release procedure documentation for the
  updated information.

µHashtools 0.2.0 (07.07.2024):
+ Progress indicator within the taskbar icon (optional, activated by
  default, requires Windows 7 or newer)
+ Changelog (this file)
+ Automated packaging of release builds (optional, requires Windows
  PowerShell)
* Improved accuracy of the progress bar
* Declared licenses according to "REUSE Specification - Version 3.2"
* Improved code comments and developer documentation
* Refactored the mainwin code

µHashtools 0.1.0 (13.03.2024):
# First public pre-release of this application